# docs/swagger.json
@@ -543,75 +543,6 @@
       }
     },
     "/users/update-password": {
-      "put": {
-        "tags": [
-          "Auth"
-        ],
-        "summary": "Update user password",
-        "operationId": "UpdateUserPassword",
-        "description": "Update the password of the currently authenticated user.",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "oldPassword": {
-                    "type": "string",
-                    "description": "Current password of the user."
-                  },
-                  "newPassword": {
-                    "type": "string",
-                    "description": "New password for the user."
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Password updated successfully.",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "integer",
-                      "example": 200
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Password updated successfully."
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "$ref": "#/components/responses/400"
-          },
-          "401": {
-            "$ref": "#/components/responses/401"
-          },
-          "404": {
-            "$ref": "#/components/responses/404"
-          },
-          "500": {
-            "$ref": "#/components/responses/500"
-          }
-        }
-      }
-    },
-    "/users/count": {
       "get": {
         "tags": [
           "Auth"
@@ -778,6 +709,87 @@
             }
           },
           "404": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/users/google-login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Registration or login via Google OAuth.",
+        "operationId": "loginWithGoogle",
+        "description": "Logs in an existing user or registers a new user using Google OAuth 2.0.",
+        "security": [],
+        "requestBody": {
+          "description": "Authorization code provided by Google OAuth 2.0",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "code"
+                ],
+                "properties": {
+                  "code": {
+                    "type": "string",
+                    "description": "Authorization code.",
+                    "example": "pJK+TbhNzRIz1BVL9rf4JXrvuYM4ecbdaoRf+22v"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully logged in or registered via Google OAuth.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully logged in via Google OAuth!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "accessToken": {
+                          "type": "string",
+                          "description": "Access token for accessing protected resources.",
+                          "example": "pJK+TbhNzRIz1BVL9rf4JXrvuYM4ecbdaoRf+22v"
+                        },
+                        "user": {
+                          "$ref": "#/components/schemas/user"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
             "$ref": "#/components/responses/401"
           },
           "500": {
@@ -1146,6 +1158,85 @@
                           },
                           "percentage": {
                             "type": "number",
+                            "example": 100
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/water/weekly": {
+      "get": {
+        "tags": [
+          "Water"
+        ],
+        "summary": "Get weekly water consumption data",
+        "description": "This endpoint allows users to retrieve their weekly water consumption data.",
+        "operationId": "getWeeklyWaterConsumption",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "startDate",
+            "required": true,
+            "description": "The start date of the week for which to retrieve the water consumption data (in ISO format, e.g., 2025-01-15).",
+            "schema": {
+              "type": "string",
+              "format": "date",
+              "example": "2025-01-15"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Weekly water consumption data successfully retrieved",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Weekly water consumption data retrieved successfully."
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "day": {
+                            "type": "integer",
+                            "description": "Day of the week (0 = Sunday, 6 = Saturday).",
+                            "example": 1
+                          },
+                          "amount": {
+                            "type": "number",
+                            "description": "Total water consumed on that day.",
+                            "example": 2000
+                          },
+                          "percentage": {
+                            "type": "number",
+                            "description": "Percentage of the daily norm achieved.",
                             "example": 100
                           }
                         }
